gitops/kustomize/draft-review/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: draft-review
  labels:
    app.kubernetes.io/name: draft-review
