gitops/kustomize/draft-review/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: draft-review
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/name: draft-review
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: draft-review
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
